add store and connect repos endpoint to it
