# api/controllers/bookmarks_controller.js
@@ -1,8 +1,8 @@
 'use strict';
 
 let request = require('request-promise-native');
+let store = require('../../store/bookmark_store');
 const GITHUBSEARCHAPI = `https://api.github.com/search/repositories`;
-let util = require('util');
 
 module.exports = {
   bookmarkedAll: getAllBookmarked,
@@ -11,13 +11,19 @@ module.exports = {
 };
 
 function getAllBookmarked(req, res) {
-  res.json([]);
+  store.getAllBookemarkedRepos()
+    .then(repos => {res.json(repos);});
 }
 
 function addBookmark(req, res) {
-  res.send();
+  let id = req.swagger.params.id.value;
+  let repo = req.swagger.params.repo.value;
+  store.addRepoToStore(id, repo)
+    .then(() => {res.send();});
 }
 
 function deleteBookmark(req, res) {
-  res.send();
+  let id = req.swagger.params.id.value;
+  store.deleteRepoById(id)
+    .then(() => {res.send();});
 }
